# icfpc2024

./: .editorconfig  .gitignore  README.md
com/: Main.hs  com.cabal
com/eval/: Main.hs
com/icfplang/: ICFP.hs
com/icfplang/icfp/: AST.hs  Eval.hs  Lang.hs  Tokens.hs
hs/: icfpc2024.cabal
hs/com/: Main.hs
hs/ic/: E.hs  Main.hs
hs/icfplang/icfp/: AST.hs  Base94.hs  Eval.hs  Tokens.hs
hs/lambdaman/: Main.hs
hs/utils/: Utils.hs
hs/utils/Utils/: Chinese.hs  Coord.hs  Deque.hs  Input.hs  List.hs  Memo.hs  PQueue.hs  Search.hs
puzzles/3d/: problem.md  solve1.txt  solve2.txt  solve2b.txt  solve3.txt
puzzles/lambdaman/: problem.md  solve1.txt  solve11.txt  solve12.txt  solve13.txt  solve14.txt  solve15.txt  solve16.txt  solve17.txt  solve2.txt  solve3.txt  solve4.txt  solve5.txt  solve7.txt  solve8.txt
puzzles/spaceship/: problem.md
