cabal-version:      3.0
name:               a
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
                 -Wno-missing-signatures
                 -Wno-type-defaults
                 -Wno-name-shadowing
                 -Wno-incomplete-uni-patterns
                 -Wno-incomplete-patterns

common extensions
    default-extensions: PartialTypeSignatures
                        ImportQualifiedPost
                        TypeApplications
                        PatternSynonyms
                        ViewPatterns
                        BlockArguments
                        LambdaCase
                        RecordWildCards
                        ParallelListComp
                        OverloadedStrings
                        TemplateHaskell
                        GADTs

executable com
    import:           warnings
    import:           extensions
    main-is:          Main.hs
    build-depends:    base ^>=4.19.0.0
                    , random
                    , req
                    , bytestring
                    , file-embed
    hs-source-dirs:  com
    default-language: GHC2021

library icfplang
    import:             warnings
    import:             extensions
    exposed-modules:    ICFP
                      , ICFP.Base94
                      , ICFP.Tokens
                      , ICFP.AST
                      , ICFP.Eval
    build-depends:      base
                      , containers
    hs-source-dirs:     icfplang
    default-language:   GHC2021

executable eval
    import:           warnings
    import:           extensions
    main-is:          Main.hs
    build-depends:    base ^>=4.19.0.0
                    , icfplang
    hs-source-dirs:   eval
    default-language: GHC2021

library utils
    import:             warnings
    import:             extensions
    ghc-options:        -Wno-x-partial
    exposed-modules:    Utils
                      , Utils.Coord
                      , Utils.Input
                      , Utils.Search
                      , Utils.Chinese
                      , Utils.List
                      , Utils.Memo
    other-modules:      Utils.Deque
                      , Utils.PQueue
    build-depends:      base
                      , array
                      , containers
                      , MemoTrie
    hs-source-dirs:     utils
    default-language:   GHC2021

executable lambdaman
    import:           warnings
    import:           extensions
    main-is:          Main.hs
    build-depends:    base ^>=4.19.0.0
                    , utils
                    , array
                    , containers
    hs-source-dirs:   lambdaman
    default-language: GHC2021

executable ic
    import:           warnings
    import:           extensions
    main-is:          Main.hs
    build-depends:    base ^>=4.19.0.0
                    , template-haskell
                    , icfplang
    hs-source-dirs:   ic
    default-language: GHC2021
